--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -11,7 +11,7 @@ titulos: #AA4465
 margin: 0;
 padding 2px;
 background-color: #BAD1CD;
-color: #F2D1C9
+color: #0E1C36
 }
 
 a{
@@ -25,8 +25,41 @@ a:hover{
   flex-direction: column;
   align-content: center;
 }
-h1 h2 {
+
+p{
+  font-size: 18px;
+  text-align: center;
+  padding:10px;
+  margin:2px;
+}
+ h2 {
   align-self: center;
   color: #AA4465;
+  text-align: center;
 
+}
+h1 {
+  align-content: center;
+  text-align: center;
+  color: #AA4465;
+
+}
+.nav-link{
+ color: #587792
+}
+.pic{
+  align-self:center;
+  padding: 40px;
+  margin: 4px;
+}
+.navbar-brand{
+  background-color: #BAD1CD
+  color:#F2D1C9
+}
+.navbar{
+  background-color: #BAD1CD
+  color:#BAD1CD;
+}
+.img-fluid{
+  align-items: center;
 }
