--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -40,7 +40,7 @@ p{
   align-self: center;
   color: #AA4465;
   text-align: center;
-  margin:1px;
+  margin:4px;
   padding:2px;
 
 }
@@ -48,7 +48,7 @@ h1 {
   align-content: center;
   text-align: center;
   color: #AA4465;
-  margin:1px;
+  margin:2px;
   padding:2px;
 
 }
@@ -108,6 +108,12 @@ h4 {
   color:#0E1C36;
   display: flex;
   flex-direction: row;
+  margin-left: 220px;
+}
+img.sa{
+  width: 50%;
+  height:50%;
+  align-self: center;
 }
 .met{
 
