--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -108,7 +108,7 @@ h4 {
   color:#0E1C36;
   display: flex;
   flex-direction: row;
-  margin-left: 220px;
+  align-items: flex-start;
 }
 img.sa{
   width: 50%;
@@ -130,4 +130,67 @@ img.sa{
   padding:4px;
   margin : 2px;
 
+}
+img.la{
+  width: 30%;
+  height:30%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+
+}
+
+@media screen and (max-width: 480px){
+
+  .salmon{
+    margin:4px;
+    padding: 2px;
+    color:#0E1C36;
+    display: flex;
+    flex-direction: column;
+
+  }
+  .prep{
+    list-style: none;
+    color:#0E1C36;
+    display: flex;
+    flex-direction: column;
+    padding:4px;
+    margin : 4px;
+  }
+
+  .ind{
+
+    color:#0E1C36;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .ing{
+    color:#0E1C36;
+    display: flex;
+    flex-direction: column;
+    padding:4px;
+    margin : 10px;
+
+  }
+
+  img.sa{
+    width: 50%;
+    height:50%;
+    align-self: center;
+
+
+  }
+  img.la{
+    width: 70%;
+    height:70%;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    margin: 10px;
+
+
+  }
 }
