fixed some issues

--- a/pagina/css/styles.css
+++ b/pagina/css/styles.css
@@ -256,7 +256,7 @@ li{
 #planbox h3 {
 	font-size: 2em;
 	line-height: .9em;
-	font-family: 'Wendy One';
+	font-family: 'Titillium';
 	color: #115F79;
 }
 
